Further Updates for SMAPI 2.9.1 (3.0 strict)

--- a/Notes/i18n/default.json
+++ b/Notes/i18n/default.json
@@ -1,6 +1,6 @@
 ﻿{
-  "notes.note.name": "Note",
+  "notes.note.name": "Written Note",
   "notes.note.info": "Write a note",
-  "notes.desk.name": "Desk",
+  "notes.desk.name": "Desk for Notes",
   "notes.desk.description": "A desk"
 }
