Added new languages

--- a/PelicanTTS/i18n/de.json
+++ b/PelicanTTS/i18n/de.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Greeting": "Guten Morgan {Player}. Es ist {DayName} der {Day} Tag im {Season}.",
+  "Greeting": "Guten Morgen {Player}. Es ist {DayName}, der {Day} Tag im {Season}.",
   "Your husband": "dein Mann",
   "Your wife": "deine Frau",
   "spring": "Frühling",
@@ -7,52 +7,17 @@
   "fall": "Herbst",
   "winter": "Winter",
   "BirthdayGreeting": "Heute hat {NPC} Geburtstag.",
-  "FestivalGreeting": "Das heutige Festival startet um",
+  "FestivalGreeting": "Das heutige Festival beginnt um",
   "a.m.": "Uhr vormittags",
   "p.m.": "Uhr nachmittags",
   "Sunday": "Sonntag",
   "Monday": "Montag",
   "Tuesday": "Dienstag",
-  "Wednesday": "Mitwoch",
+  "Wednesday": "Mittwoch",
   "Thursday": "Donnerstag",
   "Friday": "Freitag",
   "Saturday": "Samstag",
   "default": "Marlene",
-  "George": "Hans",
-  "Evelyn": "Vicki",
-  "Alex": "Hans",
-  "Haley": "Vicki",
-  "Emily": "Vicki",
-  "Jodi": "Vicki",
-  "Vincent": "Hans",
-  "Sam": "Hans",
-  "Kent": "Hans",
-  "Clint": "Hans",
-  "Lewis": "Hans",
-  "Pierre": "Hans",
-  "Caroline": "Vicki",
-  "Abigail": "Vicki",
-  "Gus": "Hans",
-  "Pam": "Vicki",
-  "Penny": "Vicki",
-  "Harvey": "Hans",
-  "Elliott": "Hans",
-  "Demetrius": "Hans",
-  "Robin": "Vicki",
-  "Maru": "Vicki",
-  "Sebastian": "Hans",
-  "Linus": "Hans",
-  "Wizard": "Hans",
-  "Marnie": "Vicki",
-  "Jas": "Vicki",
-  "Shane": "Hans",
-  "Leah": "Vicki",
-  "Dwarf": "Hans",
-  "Sandy": "Vicki",
-  "Bouncer": "Hans",
-  "Gunther": "Hans",
-  "Marlon": "Hans",
-  "Henchman": "Hans",
-  "Willy": "Hans",
-  "Morris": "Hans"
+  "default_male": "Hans",
+  "default_female": "Vicki"
 }
