--- a/PelicanTTS/i18n/ko.json
+++ b/PelicanTTS/i18n/ko.json
@@ -17,7 +17,7 @@
   "Thursday": "목요일",
   "Friday": "금요일",
   "Saturday": "토요일",
-  "default": "서연",
-  "default_male": "서연",
-  "default_female": "서연"
+  "default": "Seoyeon",
+  "default_male": "Seoyeon",
+  "default_female": "Seoyeon"
 }
