Added Spots, Characters, GMCM

--- a/PlatoWarpMenu/i18n/default.json
+++ b/PlatoWarpMenu/i18n/default.json
@@ -1,4 +1,7 @@
 ﻿{
+  "MenuButton": "Open Menu Button",
+  "menu.artifacts": "Artifact Spots",
+  "menu.characters": "Characters",
   "menu.outdoors": "Outdoors",
   "menu.indoors": "Indoors",
   "menu.buildings": "Buildings",
