Fixed artifact spots

--- a/PlatoWarpMenu/i18n/default.json
+++ b/PlatoWarpMenu/i18n/default.json
@@ -1,5 +1,6 @@
 ﻿{
   "MenuButton": "Open Menu Button",
+  "UseTempFolder": "Use Temp Folder",
   "menu.artifacts": "Artifact Spots",
   "menu.characters": "Characters",
   "menu.outdoors": "Outdoors",
