Add screen reader

--- a/PelicanTTS/i18n/default.json
+++ b/PelicanTTS/i18n/default.json
@@ -57,5 +57,6 @@
   "Henchman": "Brian",
   "Willy": "Brian",
   "Morris": "Geraint",
-  "Krobus": "Matthew"
+  "Krobus": "Matthew",
+  "Birdie": "Amy"
 }
