--- a/ATM/i18n/th.json
+++ b/ATM/i18n/th.json
@@ -1,11 +1,11 @@
-﻿{
-  "ATM_Deposit": "½Ò¡àŧ¹", // ฝากเงิน
-  "ATM_Daily_Deposit": "ÃÒÂ¡ÒÃàŧ¹½Ò¡ÃÒÂħ¹", // รายการเงินฝากรายวัน
-  "ATM_Withdraw": "¶Í¹àŧ¹", // ถอนเงิน
-  "ATM_Close": "Â¡àƅ¡", // ยกเลิก
+{
+  "ATM_Deposit": "ฝากเงิน",
+  "ATM_Daily_Deposit": "รายการเงินฝากรายวัน",
+  "ATM_Withdraw": "ถอนเงิน",
+  "ATM_Close": "ยกเลิก",
   "Fail_Main": "เฉพาะผู้เล่นหลักเท่านั้นที่จะใช้งานตู้ ATM ได้",
-  "Line_Credit": "Ç§àŧ¹Ɗ¹àҚÍ¤§àËȕÍ", // วงเงินสินเชื่อคงเหลือ
-  "Account_Ballance": "àŧ¹ã¹Ě­ƚ¤§àËȕÍ", // เงินในบัญชีคงเหลือ
+  "Line_Credit": "วงเงินสินเชื่อคงเหลือ",
+  "Account_Ballance": "เงินในบัญชีคงเหลือ",
   "Daily_Deposite": "เงินฝากรายวัน",
   "New_Credit": "วงเงินสินเชื่อใหม่",
   "Interest": "ดอกเบี้ย"
